deployments/k8s/subscription/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subscription
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: subscription
                port:
                  number: 8080
